--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
     <!-- CSS file -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
   <body>
@@ -98,12 +98,12 @@
   </body>
 </html>
 <script>
-    var choroplethVis = "./choropleth.vl.json";
-    var barVis = "./barchart.vl.json";
-    var bubbleVis = "./bubbleplot.vl.json";
-    var mapVis = "./map.vl.json";
-    var scatterVis = "./scatterplot.vl.json"
-    var pieVis = "./piechart.vl.json";
+    var choroplethVis = "./js/choropleth.vl.json";
+    var barVis = "./js/barchart.vl.json";
+    var bubbleVis = "./js/bubbleplot.vl.json";
+    var mapVis = "./js/map.vl.json";
+    var scatterVis = "./js/scatterplot.vl.json"
+    var pieVis = "./js/piechart.vl.json";
 
 
   
